# strace

./: .gitignore  CMakeLists.txt  README.md  strace.pc.in  straceConfig.cmake.in
example/: CMakeLists.txt
example/stack_trace_cc/: stack_trace_cc.c
example/stack_trace_cxx/: stack_trace_cxx.cc
include/strace/: stack_trace.h  strace.h
src/: CMakeLists.txt  get_m_context_addr.cc  get_m_context_addr.h  stack_trace.cc
